REGRESSION (r183467): Unable to start downloads in private browsing mode https://bugs.webkit.org/show_bug.cgi?id=144533

Reviewed by Darin Adler.

Source/WebCore:

If willSendRequest delegate mutated the request we would lose the requester field value from the original.

No test runner support for mutating requests.

* platform/network/cf/ResourceRequestCFNet.cpp:
(WebCore::ResourceRequest::updateFromDelegatePreservingOldProperties):

    This needs to keep the requester too.

* platform/network/cocoa/ResourceRequestCocoa.mm:
(WebCore::ResourceRequest::updateFromDelegatePreservingOldProperties): Deleted.

    Share implementations.

Source/WebKit/mac:

* WebCoreSupport/WebFrameLoaderClient.mm:
(WebFrameLoaderClient::dispatchWillSendRequest):

    Use updateFromDelegatePreservingOldProperties (like WK2) instead of doing the same thing manually.



Canonical link: https://commits.webkit.org/162709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183875 268f45cc-cd09-0410-ab3c-d52691b4dbfc